--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ gunicorn>=23.0.0
 email-validator>=2.2.0
 flask-login>=0.6.3
 flask>=3.1.0
-flask-sqlalchemy>=3.1.1
-psycopg2-binary>=2.9.10
+flask-pymongo>=2.3.0
 flask-wtf>=1.2.2
